--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
             <div class="container">
                 <img src="images/main-banner-1-1600x700.jpg" alt="banner">
             </div>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae id porro, quis magnam deserunt, iste officia quod odio ipsam fugit in maxime doloribus harum ipsum? Doloribus magni fugiat nemo nobis.</p>
         </section>
         <!-- End Slider -->
 
