The Complete Design

--- a/index.html
+++ b/index.html
@@ -32,12 +32,54 @@
                     </div>
                     <nav class="navbar">
                         <ul class="list">
-                            <li><a class="link-item" href="#">Furniture</a></li>
+                            <li class="dropdown">
+                                <a class="link-item" href="#">Furniture</a>
+                                <div class="dropdown-menu">
+                                    <ul class="drop">
+                                        <li class="head">Tables</li>
+                                        <li><a href="#">Study Table</a></li>
+                                        <li><a href="#">Coffee Table</a></li>
+                                        <li><a href="#">Stools</a></li>
+                                        <li><a href="#">Writing Desk</a></li>
+                                    </ul>
+                                    <ul class="drop">
+                                        <li class="head">Dining</li>
+                                        <li><a href="#">Dining Chairs</a></li>
+                                        <li><a href="#">Benches</a></li>
+                                        <li><a href="#">Bar Stools</a></li>
+                                        <li><a href="#">Dining Table</a></li>
+                                    </ul>
+                                    <ul class="drop">
+                                        <li class="head">Sofas</li>
+                                        <li><a href="#">Armchairs</a></li>
+                                        <li><a href="#">Day Beds</a></li>
+                                        <li><a href="#">Poufs</a></li>
+                                        <li><a href="#">Lounge Chairs</a></li>
+                                    </ul>
+                                </div>
+                            </li>
                             <li><a class="link-item" href="#">Armoires</a></li>
                             <li><a class="link-item" href="#">Study Table</a></li>
-                            <li><a class="link-item" href="#">Plastic Chair</a></li>
+                            <li class="dropdown">
+                                <a class="link-item" href="#">Plastic Chair</a>
+                                <div class="dropdown-menu">
+                                    <ul class="drop">
+                                        <li><a href="#">Bookshelves</a></li>
+                                        <li><a href="#">Cupboards</a></li>
+                                        <li><a href="#">Shoe Rack</a></li>
+                                    </ul>
+                                </div>
+                            </li>
                             <li><a class="link-item" href="#">Wardrobes</a></li>
-                            <li><a class="link-item" href="#">More</a></li>
+                            <li class="dropdown">
+                                <a class="link-item" href="#">More</a>
+                                <div class="dropdown-menu">
+                                    <ul class="drop">
+                                        <li><a href="#">Office Chair</a></li>
+                                        <li><a href="#">Wooden Chair</a></li>
+                                        <li><a href="#">Blogs</a></li>
+                                    </ul>
+                                </div></li>
                         </ul>
                     </nav>
                     <div class="login">
@@ -56,14 +98,317 @@
         <section class="slider">
             <div class="container">
                 <img src="images/main-banner-1-1600x700.jpg" alt="banner">
+                <div class="bolit">
+                    <span></span>
+                    <span></span>
+                </div>
             </div>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae id porro, quis magnam deserunt, iste officia quod odio ipsam fugit in maxime doloribus harum ipsum? Doloribus magni fugiat nemo nobis.</p>
         </section>
         <!-- End Slider -->
+
+        <!-- Start Category -->
+        <section class="category">
+            <div class="container">
+                <!-- Start General Header -->
+                <div class="section-header">
+                    <h2 class="section-title">Special Category</h2>
+                    <span class="line"></span>
+                </div>
+                <!-- End General Header -->
+
+                <div class="category-content">
+                    <div class="category-item">
+                        <img src="images/category-banner1.jpg" alt="banner">
+                        <h2 class="item-subtitle">tool popular</h2>
+                        <h4 class="item-title">modern chair collection</h4>
+                        <i class="fa fa-angle-double-right fa-lg"></i>
+                    </div>
+                    <div class="category-item">
+                        <img src="images/category-banner2.jpg" alt="banner">
+                        <h2 class="item-subtitle">classic popular</h2>
+                        <h4 class="item-title">modern chair collection</h4>
+                        <i class="fa fa-angle-double-right fa-lg"></i>
+                    </div>
+                    <div class="category-item">
+                        <img src="images/category-banner3.jpg" alt="banner">
+                        <h2 class="item-subtitle">wooden popular</h2>
+                        <h4 class="item-title">modern chair collection</h4>
+                        <i class="fa fa-angle-double-right fa-lg"></i>
+                    </div>
+                    <div class="category-item">
+                        <img src="images/category-banner4.jpg" alt="banner">
+                        <h2 class="item-subtitle">study popular</h2>
+                        <h4 class="item-title">modern chair collection</h4>
+                        <i class="fa fa-angle-double-right fa-lg"></i>
+                    </div>
+                </div>
+                <div class="bolit">
+                    <span></span>
+                    <span></span>
+                </div>
+                <div class="discount">
+                    <div class="discount-desc">
+                        <div class="head">
+                            <i class="icon fa fa-quote-left fa-5x"></i>
+                            <div class="info">
+                                <h2 class="discount-title">Penelope Astrid</h2>
+                                <span class="discount-subtitle">(Marketing)</span>
+                            </div>
+                        </div>
+                        <p>Saepe nulla corrupti non libero sed dolorum dolore temporibus quisquam, asperiores neque dolorem corporis excepturi ex soluta quas adipisci iste rerum, numquam deserunt aspernatur enim voluptatibus cupiditate. Porro fugit dolorum ex dolore.</p>
+                        <div class="lines">
+                            <span></span>
+                            <span></span>
+                            <span></span>
+                        </div>
+                    </div>
+                    <div class="discount-item">
+                        <img src="images/cms-banner-1.jpg" alt="">
+                        <div class="discount-info">
+                            <h3>30% Discount</h3>
+                            <h3>Designing Interior</h3>
+                        </div>
+                    </div>
+                    <div class="discount-item">
+                        <img src="images/cms-banner-2.jpg" alt="">
+                        <div class="discount-info">
+                            <h3>20% Discount</h3>
+                            <h3>Wooden Study Table</h3>
+                        </div>
+                    </div>
+                </div>
+                <div class="sprites">
+                    <div class="sprite-item">
+                        <div class="sprite-icon icon-1"></div>
+                        <div class="sprite-info">
+                            <h3>Free Delivery</h3>
+                            <span>Free Shipping On All Order</span>
+                        </div>
+                    </div>
+                    <div class="sprite-item">
+                        <div class="sprite-icon icon-2"></div>
+                        <div class="sprite-info">
+                            <h3>Mony Return</h3>
+                            <span>Back Guarantee in 7 Days</span>
+                        </div>
+                    </div>
+                    <div class="sprite-item">
+                        <div class="sprite-icon icon-3"></div>
+                        <div class="sprite-info">
+                            <h3>Member Discount</h3>
+                            <span>On every order over $130.00</span>
+                        </div>
+                    </div>
+                    <div class="sprite-item">
+                        <div class="sprite-icon icon-4"></div>
+                        <div class="sprite-info">
+                            <h3>Online Support</h3>
+                            <span>Support 24 hours a day</span>
+                        </div>
+                    </div>
+                    <div class="sprite-item">
+                        <div class="sprite-icon icon-5"></div>
+                        <div class="sprite-info">
+                            <h3>Return Policy</h3>
+                            <span>Send within 30 days</span>
+                        </div>
+                    </div>
+                </div>
+                <hr>
+            </div>
+        </section>
+        <!-- End Category -->
+
+        <!-- Start Products -->
+        <section class="products">
+            <div class="container">
+                <!-- Start General Header -->
+                <div class="section-header">
+                    <h2 class="section-title">Featured Products</h2>
+                    <span class="line"></span>
+                </div>
+                <!-- End General Header -->
+
+                <ul class="list-products">
+                    <li>Wooden Chair</li>
+                    <li>Plastic Chair</li>
+                    <li>Study Table</li>
+                    <li>Armchairs</li>
+                </ul>
+
+                <div class="products-content">
+                    <div class="product-item">
+                        <div class="image">
+                            <img src="images/chair1.jpg" alt="">
+                            <div class="over-image">
+                                <img src="images/chair2.jpg" alt="">
+                                <ul class="over-icon">
+                                    <li><i class="fa fa-heart"></i></li>
+                                    <li><i class="fa fa-list"></i></li>
+                                    <li><i class="fa fa-cart-plus"></i></li>
+                                    <li><i class="fa fa-eye"></i></li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="product-info">
+                            <div class="star">
+                                <i class="fa fa-star fa-sm"></i>
+                                <i class="fa fa-star fa-sm"></i>
+                                <i class="fa fa-star fa-sm"></i>
+                                <i class="fa fa-star fa-sm"></i>
+                                <i class="active fa fa-star fa-sm"></i>
+                            </div>
+                            <span class="name">Aliquam Quaerat</span>
+                            <h4>$108.80</h4>
+                        </div>
+                    </div>
+                    <div class="product-item">
+                        <div class="image">
+                            <img src="images/chair3.jpg" alt="">
+                            <div class="over-image">
+                                <img src="images/chair4.jpg" alt="">
+                                <ul class="over-icon">
+                                    <li><i class="fa fa-heart"></i></li>
+                                    <li><i class="fa fa-list"></i></li>
+                                    <li><i class="fa fa-cart-plus"></i></li>
+                                    <li><i class="fa fa-eye"></i></li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="product-info">
+                            <div class="star">
+                                <i class="fa fa-star fa-sm"></i>
+                                <i class="fa fa-star fa-sm"></i>
+                                <i class="active fa fa-star fa-sm"></i>
+                                <i class="active fa fa-star fa-sm"></i>
+                                <i class="active fa fa-star fa-sm"></i>
+                            </div>
+                            <span class="name">Consecteture Hampden</span>
+                            <h4>$110.00 <del>$119.60</del></h4>
+                        </div>
+                    </div>
+                    <div class="product-item">
+                        <div class="image">
+                            <img src="images/chair5.jpg" alt="">
+                            <div class="over-image">
+                                <img src="images/chair6.jpg" alt="">
+                                <ul class="over-icon">
+                                    <li><i class="fa fa-heart"></i></li>
+                                    <li><i class="fa fa-list"></i></li>
+                                    <li><i class="fa fa-cart-plus"></i></li>
+                                    <li><i class="fa fa-eye"></i></li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="product-info">
+                            <div class="star">
+                                <i class="fa fa-star fa-sm"></i>
+                                <i class="fa fa-star fa-sm"></i>
+                                <i class="fa fa-star fa-sm"></i>
+                                <i class="active fa fa-star fa-sm"></i>
+                                <i class="active fa fa-star fa-sm"></i>
+                            </div>
+                            <span class="name">Laborum Eveniet</span>
+                            <h4>$97.99</h4>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Studio -->
+                <div class="studio">
+                    <div class="studio-item">
+                        <img src="images/banner.PNG" alt="">
+                        <div class="studio-info">
+                            <img src="images/play.png" alt="">
+                        </div>
+                    </div>
+                    <div class="studio-desc">
+                        <div class="head">
+                            <div class="day">
+                                <h1>28</h1>
+                                <span>February, 2022</span>
+                            </div>
+                            <div class="info">
+                                <h2 class="studio-title">Necessitatibus saepe Eveniet</h2>
+                                <span class="studio-subtitle">(Marketing)</span>
+                            </div>
+                        </div>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Blanditiis, adipisci Saepe nulla corrupti non libero sed dolorum dolore temporibus quisquam, asperiores neque dolorem corporis excepturi ex soluta quas adipisci iste rerum, numquam deserunt aspernatur enim voluptatibus cupiditate. Porro fugit dolorum ex dolore.</p>
+                        <div class="lines">
+                            <span></span>
+                            <span></span>
+                            <span></span>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- banners -->
+                <div class="banners">
+                    <div class="box">
+                        <div class="item"><img src="images/client1.png" alt=""></div>
+                        <div class="item"><img src="images/client6.png" alt=""></div>
+                        <div class="item"><img src="images/client4.png" alt=""></div>
+                        <div class="item"><img src="images/client2.png" alt=""></div>
+                        <div class="item"><img src="images/client5.png" alt=""></div>
+                        <div class="item"><img src="images/client3.png" alt=""></div>
+                    </div>
+                </div>
+
+            </div>
+        </section>
+        <!-- End Products -->
+
+        <footer>
+            <div class="container">
+                <div class="foot-cont">
+                    <div class="rocker">
+                        <img src="images/footer-logo.png" alt="">
+                        <p>Laboriosam suscipit laudantium aspernatur, Eos necessitatibus veniam reprehenderit quidem assumenda unde eius recusandae eaque.</p>
+                        <div class="media">
+                            <img src="images/cms-footer-1.png" alt="">
+                            <img src="images/cms-footer-2.png" alt="">
+                        </div>
+                    </div>
+                    <div class="contact info">
+                        <h3>Information</h3>
+                        <ul>
+                            <li><a href="#">About Us</a></li>
+                            <li><a href="#">Delivery Information</a></li>
+                            <li><a href="#">Privacy Policy</a></li>
+                            <li><a href="#">Terms & Conditions</a></li>
+                            <li><a href="#">Site Map</a></li>
+                        </ul>
+                    </div>
+                    <div class="contact account">
+                        <h3>Account</h3>
+                        <ul>
+                            <li><a href="#">My Account</a></li>
+                            <li><a href="#">Order History</a></li>
+                            <li><a href="#">Wish List</a></li>
+                            <li><a href="#">Newsletter</a></li>
+                            <li><a href="#">Returns</a></li>
+                        </ul>
+                    </div>
+                    <div class="subscribe">
+                        <h3>Subscribe Now</h3>
+                        <div class="email">
+                            <input type="text" name="email" placeholder="Enter Your Email Address">
+                            <span></span>
+                        </div>
+                        <div class="social">
+                            <a href="#"><i class="fab fa-facebook-f"></i></a>
+                            <a href="#"><i class="fab fa-twitter"></i></a>
+                            <a href="#"><i class="fab fa-youtube"></i></a>
+                            <a href="#"><i class="fa-brands fa-linkedin"></i></a>
+                            <a href="#"><i class="fa-brands fa-google-plus-g"></i></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </footer>
 
     </body>
 
 </html>
 
-
-<!-- 39min -->
+<!-- 35:18 min -->
